--- a/Misc/NEWS.d/3.6.9.rst
+++ b/Misc/NEWS.d/3.6.9.rst
@@ -1,3 +1,18 @@
+.. bpo: 37437
+.. date: 2019-06-27-20-33-50
+.. nonce: du39_A
+.. release date: 2019-07-02
+.. section: Library
+
+Update vendorized expat version to 2.2.7.
+
+..
+
+.. bpo: 34602
+.. date: 2019-07-02-01-06-47
+.. nonce: 10d4wl
+.. section: macOS
+
 Avoid test suite failures on macOS by no longer calling resource.setrlimit
 to increase the process stack size limit at runtime.  The runtime change is
 no longer needed since the interpreter is being built with a larger default
