bpo-37367: changes per reviewer request:
1. use "octal escape sequences" instead of "octal values" in comments
2. remove underscore from _literal_eval

Also, use "0o1000-0o400" instead of "256" to make it clear to the reader
where the value came from.

--- a/Misc/NEWS.d/next/Core and Builtins/2019-07-08-19-08-38.bpo-37367.SVtBhh.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2019-07-08-19-08-38.bpo-37367.SVtBhh.rst
@@ -1,2 +1,2 @@
-Byte strings containing octal values greater than 255 will now raise
-ValueError.  Patch by (Jeffrey Kintscher).
+Byte strings containing octal escape sequences with values greater than 255
+will now raise ValueError.  Patch by Jeffrey Kintscher.
