Edit blurb and coverage.

--- a/Misc/NEWS.d/next/IDLE/2019-03-21-08-35-00.bpo-36390.OdDCGk.rst
+++ b/Misc/NEWS.d/next/IDLE/2019-03-21-08-35-00.bpo-36390.OdDCGk.rst
@@ -1,1 +1,2 @@
-Refactor formatting methods from editor.py and add tests.
+Rename paragraph.py to format.py and add region formatting methods
+from editor.py.  Add tests for the latter.
