Deprecate PyCFunction_Call

--- a/Misc/NEWS.d/next/C API/2019-07-16-11-02-00.bpo-37151.YKfuNA.rst
+++ b/Misc/NEWS.d/next/C API/2019-07-16-11-02-00.bpo-37151.YKfuNA.rst
@@ -1,1 +1,1 @@
-``PyCFunction_Call`` is now an alias of :c:func:`PyObject_Call`.
+``PyCFunction_Call`` is now a deprecated alias of :c:func:`PyObject_Call`.
