Updated correct spelling and inline markup

--- a/Misc/NEWS.d/next/Core and Builtins/2019-07-20-22-34-42.bpo-37444.UOd3Xs.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2019-07-20-22-34-42.bpo-37444.UOd3Xs.rst
@@ -1,1 +1,1 @@
-Update differing exception between buildints and importlib
+Update differing exception between :meth:`builtins.__import__` and :meth:`importli.__import__`.
