--- a/Doc/whatsnew/3.8.rst
+++ b/Doc/whatsnew/3.8.rst
@@ -770,8 +770,8 @@ threading
 
 * Add a new
   :func:`threading.get_native_id` function and a :data:`~threading.Thread.native_id`
-  attribute to the :class:`threading.Thread` class. These return a thread's native
-  integral identifier (``TID``) provided by the OS (kernel).
+  attribute to the :class:`threading.Thread` class. These return the native
+  integral Thread ID of the current thread assigned by the kernel.
   This feature is only available on certain platforms, see
   :func:`get_native_id <threading.get_native_id>` for more information.
   (Contributed by Jake Tesler in :issue:`36084`.)
