--- a/Doc/whatsnew/3.7.rst
+++ b/Doc/whatsnew/3.7.rst
@@ -1023,7 +1023,7 @@ Add "Run Customized" to the Run menu to run a module with customized
 settings. Any command line arguments entered are added to sys.argv.
 They re-appear in the box for the next customized run.  One can also
 suppress the normal Shell main module restart.  (Contributed by Cheryl
-Sabella, Terry Jan Reedy, and others in :issues:`5680` and `37627` .)
+Sabella, Terry Jan Reedy, and others in :issue:`5680` and :issue:`37627`.)
 
 New in 3.7.5:
 
