--- a/Misc/NEWS.d/next/macOS/2019-07-13-15-58-18.bpo-18049.MklhQQ.rst
+++ b/Misc/NEWS.d/next/macOS/2019-07-13-15-58-18.bpo-18049.MklhQQ.rst
@@ -1,2 +1,3 @@
-Increase stack size of threads to 16MB on macOS, to match the stack size of
-the main thread. This avoids crashes on deep recursion in threads.
+Increase the default stack size of threads from 5MB to 16MB on macOS, to
+match the stack size of the main thread. This avoids crashes on deep recursion
+in threads.
