--- a/Doc/whatsnew/3.9.rst
+++ b/Doc/whatsnew/3.9.rst
@@ -181,3 +181,10 @@ This section lists previously described changes and other bugfixes
 that may require changes to your code.
 
 
+CPython bytecode changes
+------------------------
+
+* The :opcode:`ASSERT_RAISE` opcode was added for handling the
+  :keyword:`assert` statement. Previously, the assert statement would not work
+  correctly if the :exc:`AssertionError` exception was being shadowed.
+  (Contributed by Zackery Spytz in :issue:`34880`.)
