--- a/Misc/NEWS.d/next/Core and Builtins/2019-07-22-11-05-05.bpo-37648.6TY2L-.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2019-07-22-11-05-05.bpo-37648.6TY2L-.rst
@@ -1,3 +1,3 @@
-Fixed minor inconsistency in ``list.__contains__()``, ``tuple.__contains__``
-and few other places. The collection's item is now always at the left and
-the needle is on the right of ``==``.
+Fixed minor inconsistency in :meth:`list.__contains__`,
+:meth:`tuple.__contains__` and a few other places. The collection's item is
+now always at the left and the needle is on the right of ``==``.
