--- a/Misc/NEWS.d/next/Core and Builtins/2024-03-26-20-20-36.gh-issue-117201.qaS7em.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-03-26-20-20-36.gh-issue-117201.qaS7em.rst
@@ -1,1 +1,2 @@
-Handle leading ``//`` for :func:`posixpath.commonpath` using :func:`posixpath.splitroot`.
+* Handle leading ``//`` for :func:`posixpath.commonpath` using :func:`posixpath.splitroot`.
+* Raise TypeError for non-sequences for :func:`ntpath.commonpath`.
