--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -214,10 +214,11 @@ Other Language Changes
 
   (Contributed by William Woodruff in :gh:`112389`.)
 
-* :class:`configparser.ConfigParser` now accepts unnamed sections before named
-ones, if configured to do so.
+* The :class:`configparser.ConfigParser` now accepts unnamed sections before named
+   ones, if configured to do so.
 
-(Contributed by Pedro Sousa Lacerda in :gh:`66449`)
+   (Contributed by Pedro Sousa Lacerda in :gh:`66449`)
+
 
 New Modules
 ===========
