Minor tweaks to the docs

--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -215,7 +215,7 @@ Other Language Changes
   (Contributed by William Woodruff in :gh:`112389`.)
 
 * The :class:`configparser.ConfigParser` now accepts unnamed sections before named
-   ones, if configured to do so.
+   ones if configured to do so.
 
    (Contributed by Pedro Sousa Lacerda in :gh:`66449`)
 
