--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -421,14 +421,14 @@ itertools
 lzma
 ----
 
-* Add :const:`lzma.LZMA_VERSION` and :const:`lzma.LZMA_RUNTIME_VERSION`. The former
-  reports the version string of the underlying ``lzma`` library during build while
-  the later reports runtime version.
+* Add :const:`lzma.LZMA_VERSION`, :const:`lzma.LZMA_HEADER_VERSION`, and
+  related constants. They report the version of the underlying ``lzma`` library
+  found at runtime and the header versions used at build time.
   (Contributed by Chien Wong in :gh:`115988`.)
 
-* Add support of new BCJ filters ARM64 and RISC-V via :const:`!lzma.FILTER_ARM64` and
-  :const:`!lzma.FILTER_RISCV`.
-  Note that the new filters will work only if runtime library supports them. ARM64 filter
+* Add support of new BCJ filters ARM64 and RISC-V via
+  :const:`!lzma.FILTER_ARM64` and :const:`!lzma.FILTER_RISCV`.  Note that the
+  new filters will work only if runtime library supports them. ARM64 filter
   requires ``lzma`` 5.4.0 or newer while RISC-V requires 5.6.0 or newer.
   (Contributed by Chien Wong in :gh:`115988`.)
 
