Update Misc/NEWS.d/next/Core and Builtins/2024-03-30-19-34-51.gh-issue-117394.qCepkD.rst
Co-authored-by: Alex Waygood <Alex.Waygood@Gmail.com>

--- a/Misc/NEWS.d/next/Core and Builtins/2024-03-30-19-34-51.gh-issue-117394.qCepkD.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-03-30-19-34-51.gh-issue-117394.qCepkD.rst
@@ -1,1 +1,2 @@
-Reduce syscalls for :func:`posixpath.ismount`.
+Speedup :func:`os.path.ismount` on Unix systems by reducing the number of
+syscalls.
