Mention root_dir

--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -802,8 +802,9 @@ Deprecated
   translation was not found.
   (Contributed by Serhiy Storchaka in :gh:`88434`.)
 
-* :mod:`glob`: Deprecated undocumented :func:`!glob.glob0` and
-  :func:`!glob.glob1` functions; use :func:`glob.glob` instead.
+* :mod:`glob`: The undocumented :func:`!glob.glob0` and :func:`!glob.glob1`
+  functions are deprecated. Use :func:`glob.glob` and pass a directory to its
+  *root_dir* argument instead.
   (Contributed by Barney Gale in :gh:`117337`.)
 
 * :mod:`http.server`: :class:`http.server.CGIHTTPRequestHandler` now emits a
