--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -114,7 +114,7 @@ Improved Error Messages
       File "/home/random.py", line 1, in <module>
         import random; print(random.randint(5))
                             ^^^^^^^^^^^^^^
-    AttributeError: module 'random' has no attribute 'randint' (consider renaming '/home/random.py' since it has the same name as the standard library module named 'random'and takes precedence over it on sys.path)
+    AttributeError: module 'random' has no attribute 'randint' (consider renaming '/home/random.py' since it has the same name as the standard library module named 'random' and the import system gives it precedence)
 
   Similarly, if a script has the same name as a third-party
   module it attempts to import, and this results in errors,
