--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-02-06-16-49.gh-issue-109120.X485oN.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-02-06-16-49.gh-issue-109120.X485oN.rst
@@ -1,2 +1,2 @@
-Added handle of incorrect star expressions, e.g `f(3, *)`. Patch by
+Added handle of incorrect star expressions, e.g ``f(3, *)``. Patch by
 Grigoryev Semyon
