--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-02-17-37-35.gh-issue-117431.vDKAOn.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-02-17-37-35.gh-issue-117431.vDKAOn.rst
@@ -1,6 +1,7 @@
 Improve the performance of the following :class:`str` methods
 by adapting them to the :c:macro:`METH_FASTCALL` calling convention:
 
+* :meth:`~str.count`
 * :meth:`~str.endswith`
 * :meth:`~str.find`
 * :meth:`~str.index`
