Amend NEWS entry

--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-03-09-49-15.gh-issue-117431.WAqRgc.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-03-09-49-15.gh-issue-117431.WAqRgc.rst
@@ -2,5 +2,10 @@ Improve the performance of the following :class:`bytes` and
 :class:`bytearray` methods by adapting them to the :c:macro:`METH_FASTCALL`
 calling convention:
 
+* :meth:`!count`
 * :meth:`!endswith`
+* :meth:`!find`
+* :meth:`!index`
+* :meth:`!rfind`
+* :meth:`!rindex`
 * :meth:`!startswith`
