gh-117518: Add PyTuple_GetItemRef() function
Replace Py_NewRef(PyTuple_GET_ITEM(tuple, pos)) with
PyTuple_GetItemRef(tuple, pos).

--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -1773,6 +1773,11 @@ New Features
 * Add :c:func:`PyType_GetModuleByDef` to the limited C API
   (Contributed by Victor Stinner in :gh:`116936`.)
 
+* Add :c:func:`PyTuple_GetItemRef` function, similar to
+  :c:func:`PyTuple_GetItem` but return a :term:`strong reference` instead of a
+  :term:`borrowed reference`.
+  (Contributed by Victor Stinner in :gh:`117518`.)
+
 
 Porting to Python 3.13
 ----------------------
