--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-03-13-44-04.gh-issue-116968.zgcdG2.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-03-13-44-04.gh-issue-116968.zgcdG2.rst
@@ -5,7 +5,7 @@ API used for adaptive specialization counters is changed but the behavior is
 
 The behavior of the Tier 2 counters is changed:
 
-- There are no longer dynamic thresholds (we never varied these). - All
-counters now use the same exponential backoff. - The counter for
-``JUMP_BACKWARD`` starts counting down from 16. - The ``temperature`` in
-side exits starts counting down from 64.
+* There are no longer dynamic thresholds (we never varied these).
+* All counters now use the same exponential backoff.
+* The counter for ``JUMP_BACKWARD`` starts counting down from 16.
+* The ``temperature`` in side exits starts counting down from 64.
