Update Misc/NEWS.d/next/Core and Builtins/2024-04-06-16-42-34.gh-issue-117584.hqk9Hn.rst
Co-authored-by: AN Long <aisk@users.noreply.github.com>

--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-06-16-42-34.gh-issue-117584.hqk9Hn.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-06-16-42-34.gh-issue-117584.hqk9Hn.rst
@@ -1,1 +1,1 @@
-Raise TypeError for non-paths in :func:`posixpath.relpath()`.
+Raise :exec:`TypeError` for non-paths in :func:`posixpath.relpath()`.
