Revert "Update Misc/NEWS.d/next/Core and Builtins/2024-04-06-16-42-34.gh-issue-117584.hqk9Hn.rst"
This reverts commit 27d0c708eeff347e43a99d371f0c710bce49b292.

--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-06-16-42-34.gh-issue-117584.hqk9Hn.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-06-16-42-34.gh-issue-117584.hqk9Hn.rst
@@ -1,1 +1,1 @@
-Raise :exec:`TypeError` for non-paths in :func:`posixpath.relpath()`.
+Raise TypeError for non-paths in :func:`posixpath.relpath()`.
