Recommend using None

--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -1874,7 +1874,7 @@ Porting to Python 3.13
 
 * The :c:func`PyTuple_SET_ITEM` inline function may not be passed ``NULL``.
   This has always been the documented behavior, but was not enforced for
-  the value until now.
+  the value until now. :c:var:``Py_None` should be used instead of ``NULL``.
 
 Deprecated
 ----------
