--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -1872,7 +1872,7 @@ Porting to Python 3.13
   platforms, the ``HAVE_STDDEF_H`` macro is only defined on Windows.
   (Contributed by Victor Stinner in :gh:`108765`.)
 
-* The :c:func`PyTuple_SET_ITEM` inline function may not be passed ``NULL``.
+* The :c:func:`PyTuple_SET_ITEM` inline function may not be passed ``NULL``.
   This has always been the documented behavior, but was not enforced for
   the value until now. :c:var:``Py_None` should be used instead of ``NULL``.
 
