--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-11-21-17-23.gh-issue-117431.ZxdAFN.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-11-21-17-23.gh-issue-117431.ZxdAFN.rst
@@ -1,1 +1,1 @@
-Improve performance of :func:`str.startswith` and `str.endswith`.
+Improve performance of :func:`str.startswith` and :func:`str.endswith`.
