Link *Mimalloc differences from upstream* #113141

--- a/Doc/whatsnew/3.13.rst
+++ b/Doc/whatsnew/3.13.rst
@@ -1614,7 +1614,7 @@ Build Changes
 
 * Python now bundles the `mimalloc library <https://github.com/microsoft/mimalloc>`__.
   It is licensed under the MIT license, see :ref:`mimalloc license <mimalloc-license>`.
-  The bundled mimalloc has custom changes.
+  The bundled mimalloc has custom changes, see :gh:`113141` for details.
   (Contributed by Dino Viehland in :gh:`109914`.)
 
 
