--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-13-18-59-25.gh-issue-115874.c3xG-E.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-13-18-59-25.gh-issue-115874.c3xG-E.rst
@@ -1,1 +1,1 @@
-Fixed a possible segfault during garbage collection of `_asyncio.FutureIter` objects
+Fixed a possible segfault during garbage collection of ``_asyncio.FutureIter`` objects
