Update Misc/NEWS.d/next/Core and Builtins/2024-04-15-07-37-09.gh-issue-117881.07H0wI.rst

--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-15-07-37-09.gh-issue-117881.07H0wI.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-15-07-37-09.gh-issue-117881.07H0wI.rst
@@ -1,1 +1,1 @@
-prevent concurrect access to an async generator via athrow().throw() or asend().throw()
+prevent concurrent access to an async generator via athrow().throw() or asend().throw()
