Apply suggestions from code review

--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-13-16-55-53.gh-issue-117536.xkVbfv.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-13-16-55-53.gh-issue-117536.xkVbfv.rst
@@ -1,1 +1,1 @@
-Fix a :exc:`RuntimeWarning` when calling ``agen.aclose().throw(Exception)``
+Fix a :exc:`RuntimeWarning` when calling ``agen.aclose().throw(Exception)``.
