--- a/Misc/NEWS.d/next/Core and Builtins/2024-04-15-13-53-59.gh-issue-117894.8LpZ6m.rst
+++ b/Misc/NEWS.d/next/Core and Builtins/2024-04-15-13-53-59.gh-issue-117894.8LpZ6m.rst
@@ -1,1 +1,1 @@
-Prevent ``agen.aclose()`` objects being re-used after ``.throw()``
+Prevent ``agen.aclose()`` objects being re-used after ``.throw()``.
